cmake_minimum_required(VERSION 3.0 FATAL_ERROR)
project(Fractal)

add_definitions(-DUNICODE -D_UNICODE)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)


# CUDA
find_package(CUDA REQUIRED)

# 配置 OpenCV 库
FIND_PACKAGE(OpenCV REQUIRED)
INCLUDE_DIRECTORIES(${OpenCV_INCLUDE_DIRS})
LINK_LIBRARIES(${OpenCV_LIBS})


AUX_SOURCE_DIRECTORY(. SRC_LIST)
CUDA_ADD_EXECUTABLE(fractal fractal.cu)
